@@ -1,4 +1,4 @@
 #Ibator build version info
-#Sun Apr 12 16:33:15 CDT 2009
+#Wed Apr 22 12:17:30 CDT 2009
 version=1.2.2
-buildNum=726
+buildNum=727
