@@ -96,6 +96,7 @@
   <li>IBATIS-592 - Added attributes to IntrospectedTable that contain the calculated
       SqlMap namespace, and the calculated runtime table names.  These can now be overridden in
       plugins.</li>
+  <li>Fixed addCriterionfor JDBC* methods so that they all do a null check.</li>
 </ul>
 
 <h2>Version 1.2.1</h2>
